# irona

./: CMakeLists.txt  LICENSE  README.md  package.xml
.github/workflows/: github_CI.yml
action/: CleanRoom.action
docs/: Doxyfile
docs/html/: annotated.html  classDetector-members.html  classDetector.html  classIronaGroup-members.html  classIronaGroup.html  classes.html  detector_8hpp.html  detector_8hpp__incl.map  detector_8hpp__incl.md5  detector_8hpp_source.html  dir_5bcac561ee045eb6249a769e9935f8e3.html  dir_d44c64559bbebec7f509842c48db8b23.html  files.html  functions.html  functions_func.html  functions_vars.html  graph_legend.html  index.html  ironagroup_8hpp.html  ironagroup_8hpp__incl.map  ironagroup_8hpp__incl.md5  ironagroup_8hpp_source.html
docs/html/search/: all_0.js  all_1.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  classes_0.js  classes_1.js  files_0.js  files_1.js  functions_0.js  functions_1.js  functions_2.js  functions_3.js  functions_4.js  functions_5.js  functions_6.js  searchdata.js  variables_0.js  variables_1.js  variables_2.js  variables_3.js  variables_4.js  variables_5.js  variables_6.js  variables_7.js  variables_8.js
include/irona/: detector.hpp  ironagroup.hpp
launch/: custom_manipulation_gazebo.launch  custom_navigation.launch  robot_bringup.launch  robot_custom.launch
maps/: map.pgm
results/: coverage_report.txt  cppcheck.txt  cpplint.txt
src/: detectmain.cpp  detectobject.cpp  ironagroup.cpp  ironamain.cpp
srv/: DetectObject.srv
test/: iron_test_full.test  irona_test.test  main.cpp  test_cases.cpp
worlds/: irona_world3.world  irona_world4.world
worlds/aruco_box_resize/: model.config  model.sdf
