<package format="2">
    <name>irona</name>
    <version>1.0.0</version>
    <description>The irona package</description>
    <maintainer email="mppavan@umd.edu">Pavan Mantripragada</maintainer>
    <license>MIT</license>

    <buildtool_depend>catkin</buildtool_depend>

    <build_depend>roscpp</build_depend>
    <build_depend>std_msgs</build_depend>
    <build_depend>geometry_msgs</build_depend>
    <build_depend>tf2_geometry_msgs</build_depend>
    <build_depend>move_base_msgs</build_depend>
    <build_depend>moveit_msgs</build_depend>
    <build_depend>moveit_ros_planning</build_depend>
    <build_depend>moveit_ros_planning_interface</build_depend>
    <build_depend>moveit_core</build_depend> 
    <build_depend>message_generation</build_depend>
    <build_depend>actionlib</build_depend>
    <build_depend>actionlib_msgs</build_depend>
    <build_depend>gazebo_msgs</build_depend> 

    <exec_depend>roscpp</exec_depend>
    <exec_depend>std_msgs</exec_depend>
    <exec_depend>geometry_msgs</exec_depend>
    <exec_depend>tf2_geometry_msgs</exec_depend>
    <exec_depend>move_base_msgs</exec_depend>
    <exec_depend>moveit_msgs</exec_depend>
    <exec_depend>moveit_ros_planning</exec_depend>
    <exec_depend>moveit_ros_planning_interface</exec_depend>
    <exec_depend>moveit_core</exec_depend>
    <exec_depend>message_runtime</exec_depend>
    <exec_depend>actionlib</exec_depend>
    <exec_depend>actionlib_msgs</exec_depend>
    <exec_depend>gazebo_msgs</exec_depend>

    <test_depend>rosunit</test_depend> 
    <test_depend>code_coverage</test_depend>    
</package>